open-webui/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui
  namespace: open-webui-k8s
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ai.mtaha.dev`)
      priority: 10
      services:
        - kind: Service
          name: open-webui
          namespace: open-webui-k8s
          passHostHeader: true
          port: 80
          scheme: http
  tls:
    domains:
      - main: ai.mtaha.dev
    secretName: wildcard-mtaha.dev-tls
